backend/manifests/manifest-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-leocinema-svc
  namespace: leocinema
  labels:
    db: mariadb-leocinema
    tier: db
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    db: mariadb-leocinema
    tier: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: leocinema
spec:
  serviceName: mariadb-leocinema-svc
  replicas: 1
  selector:
    matchLabels:
      db: mariadb-leocinema
      tier: db
  template:
    metadata:
      labels:
        db: mariadb-leocinema
        tier: db
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - |
                    mariadb -u root -p"$MYSQL_ROOT_PASSWORD" -e "CREATE DATABASE IF NOT EXISTS leocinemadb;"
                    mariadb -u root -p"$MYSQL_ROOT_PASSWORD" -e "CREATE USER IF NOT EXISTS 'leocinemauser'@'%' IDENTIFIED BY 'leocinemapass';"
                    mariadb -u root -p"$MYSQL_ROOT_PASSWORD" -e "GRANT ALL PRIVILEGES ON leocinemadb.* TO 'leocinemauser'@'%';"
                    mariadb -u root -p"$MYSQL_ROOT_PASSWORD" -e "FLUSH PRIVILEGES;"
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
